# test-site

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: auth.rs  database.rs  handlers.rs  main.rs  middleware.rs  models.rs
frontend/: index.html  package-lock.json  package.json
frontend/public/images/social/: .bluesky.svg.kate-swp
frontend/src/: App.vue
frontend/src/components/: AuthModal.vue  Footer.vue  Header.vue  HeroCarousel.vue  NewsCarousel.vue
frontend/src/router/: guards.js  index.js
frontend/src/views/: About.vue  AdminPanel.vue  AdminTest.vue  CodeOfConduct.vue  Contacts.vue  GameDetails.vue  Games.vue  Home.vue  Login.vue  PrivacyPolicy.vue  TermsOfUse.vue  UserProfile.vue
