[package]
name = "game-company-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
dotenvy = "0.15"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.0"
